# try-gpt-oss

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
data/: f1_score_report.xlsx  gt.txt
data/Qwen3-14B-bid/: f1_score.csv  results.txt
data/gpt-oss-20b-bid/: f1_score.csv  results.txt
evaluate/: __init__.py  calculate_f1_score_from_csv.py  get_f1_score.py  get_f1_score_data.py  get_f1_score_data_with_vllm.py
finetuning/: sft.py
jobs/: base_job.sh  compare_gpt_and_qwen.sh  gpt-oss-20b.sh  qwen3-14b.sh  qwen3-32b.sh
jobs/.ipynb_checkpoints/: base_job-checkpoint.sh
model_lora/Qwen3-14B-adapter/: README.md  adapter_config.json  adapter_model.safetensors  added_tokens.json  chat_template.jinja  special_tokens_map.json  tokenizer.json  tokenizer_config.json
model_lora/gpt-oss-20b-adapter/: README.md  adapter_config.json  adapter_model.safetensors  chat_template.jinja  special_tokens_map.json  tokenizer.json  tokenizer_config.json
scripts/: infer.sh  sft.sh  vllm-infer.sh
sft/: accelerate_config.yaml  main.py  run.sh
utils/: __init__.py  utils.py
